--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<app-home></app-home>
+<!-- <app-home></app-home> -->
 <!-- <app-left-nav></app-left-nav> -->
 <router-outlet>
   
