--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -2,7 +2,7 @@
     <img src="assets/Logo.png" alt="Logo" class="logo" />
 
     <span class="spacer"></span>
-    <div class="school_list">
+    <!-- <div class="school_list">
         <div class="schoolContainer">
             <div class="schoolimage"><img
                     src="https://www.starexuniversity.com/uploads/StarexSchools/icons/Agricultural-Studies-Icon-03.png "
@@ -95,5 +95,5 @@
 
             </div>
         </div>
-    </div>
+    </div> -->
 </mat-toolbar>
