--- a/src/app/school_list/law/law.html
+++ b/src/app/school_list/law/law.html
@@ -1,1 +1,140 @@
-<p>law works!</p>
+<section class="content py50">
+	<div class="container">
+		<div class="row">
+			
+			<div class="col-md-12 order-md-2">
+			<h1 class="contentTitle" style="font-size: 1.75rem;">School Of Law </h1>
+			 
+				<p class="mt-2 font-weight-bold font-italic"> </p>
+				<div class="row">
+
+
+                
+					<div class="col-sm-12"> 
+						 <div class="owl-carousel owl-theme gall owl-loaded owl-drag">
+						     
+						 						 							 		   
+						 							 		   
+						 							 		   
+						 							 		   
+						 							 		   
+						 							 		   
+						 							 		   
+						 							 						
+					<div class="owl-stage-outer"><div class="owl-stage" style="transform: translate3d(-520px, 0px, 0px); transition: 0.25s; width: 3640px;"><div class="owl-item" style="width: 510px; margin-right: 10px;"><div class="item">
+                                            <img class="w-100 mt-3" src="https://starexuniversity.com/app-assets/vendors/assets/images/schools/POLICE__AWARD_IN_LAW.webp" alt="">
+                                        </div></div><div class="owl-item active" style="width: 510px; margin-right: 10px;"><div class="item">
+                                            <img class="w-100 mt-3" src="https://starexuniversity.com/app-assets/vendors/assets/images/schools/nakad_natak.webp" alt="">
+                                        </div></div><div class="owl-item" style="width: 510px; margin-right: 10px;"><div class="item">
+                                            <img class="w-100 mt-3" src="https://starexuniversity.com/app-assets/vendors/assets/images/schools/LAW_DEPARTMENT_COLLAB_WITH_POLICE_DEPARTMENT.webp" alt="">
+                                        </div></div><div class="owl-item" style="width: 510px; margin-right: 10px;"><div class="item">
+                                            <img class="w-100 mt-3" src="https://starexuniversity.com/app-assets/vendors/assets/images/schools/award_to_chancellar.webp" alt="">
+                                        </div></div><div class="owl-item" style="width: 510px; margin-right: 10px;"><div class="item">
+                                            <img class="w-100 mt-3" src="https://starexuniversity.com/app-assets/vendors/assets/images/schools/school_of_law.webp" alt="">
+                                        </div></div><div class="owl-item" style="width: 510px; margin-right: 10px;"><div class="item">
+                                            <img class="w-100 mt-3" src="https://starexuniversity.com/app-assets/vendors/assets/images/schools/student_with_teachers.webp" alt="">
+                                        </div></div><div class="owl-item" style="width: 510px; margin-right: 10px;"><div class="item">
+                                            <img class="w-100 mt-3" src="https://starexuniversity.com/app-assets/vendors/assets/images/schools/Trip_of _delhi.webp" alt="">
+                                        </div></div></div></div><div class="owl-nav disabled"><button type="button" role="presentation" class="owl-prev"><span aria-label="Previous">‹</span></button><button type="button" role="presentation" class="owl-next"><span aria-label="Next">›</span></button></div><div class="owl-dots disabled"></div></div>
+						<div class="row">
+							<div class="col-sm-12">
+								<h1>Welcome to the School of Law, Starex University</h1>
+    <p>Here at the School of Law, we blend the rigor of traditional legal education with the flexibility of digital learning. Our programs are designed for aspiring legal professionals who seek to balance their academic pursuits with personal and professional commitments.</p>
+    
+    <p>Our curriculum is developed by experienced faculty members who are leaders in their respective fields. They bring a wealth of practical and theoretical knowledge to the virtual classroom, ensuring that you receive a robust and relevant education.</p>
+    
+    <p>From foundational courses in constitutional law, contracts, and torts to specialized electives in international law, environmental law, and intellectual property, our programs cover a wide spectrum of legal disciplines.</p>
+    
+    <p>We are committed to your success. Our support services include academic advising, career counseling, and technical support, ensuring that you have the guidance and resources necessary to achieve your goals.</p>
+    
+    <h2>Our Vision</h2>
+    <p>At Starex School of Law, we have the vision to impart globalized education with the aim of producing world-class professionals, scholars, and academics in law and other disciplines.</p>
+    
+    <p>The School of Law at Starex University aspires to build upon past experiences and current innovations in teaching to create an institution of global excellence for the future.</p>
+    
+    <p>Join us at Starex University, Gurugram, where your legal education meets the future.</p>								<div class="table">
+								
+								<table class="table table-bordered">
+									<tbody><tr>
+										<th>Course</th>
+									
+										<th>Duration</th>
+										<th>Eligibility Criteria</th>
+											<th>No. of Seats</th>
+<!--										<th>Semester Fee</th>-->
+									</tr>
+																												    
+										    <tr>
+										     <td>B.A. LL.B (Hons.) With Judicial Study<br>
+	                                         										       </td>
+										   
+											     <td>5 Years</td>
+											     <td>10+2 pass with at least 45% marks, Age limit 20 years for General category &amp; 22 Years for SC/ST &amp; OBC as of 1st August of the year in which admission is sought, Age relaxation for SC/ST	</td>
+											       <td>120</td>
+											   <!--  <td><i class='fa fa-inr'></i>55000/-</td>-->
+										      </tr>
+										    									    
+										    <tr>
+										     <td>BBA LL.B <br>(Hons. ) With Judicial Study<br>
+	                                         										       </td>
+										   
+											     <td>5 Years</td>
+											     <td>10+2 pass with at least 45% marks, Age limit 20 years for General category &amp; 22 Years for SC/ST &amp; OBC as of 1st August of the year in which admission is sought, Age relaxation for SC/ST</td>
+											       <td>60</td>
+											   <!--  <td><i class='fa fa-inr'></i>55000/-</td>-->
+										      </tr>
+										    									    
+										    <tr>
+										     <td>LL.B With Judicial Study<br>
+	                                         										       </td>
+										   
+											     <td>3 Years</td>
+											     <td>Have Passed Graduation (10+2+3 pattern) in any discipline from a recognised College/University, having secured minimum 45% marks in aggregate for the general category and 40% marks in aggregate for SC/ST category</td>
+											       <td>60</td>
+											   <!--  <td><i class='fa fa-inr'></i>45000/-</td>-->
+										      </tr>
+										    									    
+										    <tr>
+										     <td>LL.M With Judicial Study<br>
+	                                         										       </td>
+										   
+											     <td>2 Years</td>
+											     <td>LL.B pass with 50% Marks from a recognized college/university</td>
+											       <td>30</td>
+											   <!--  <td><i class='fa fa-inr'></i>50000/-</td>-->
+										      </tr>
+										    																	</tbody></table>
+                                <button class="flashButton" style="
+    padding-top: 3px;
+    height: 12%;
+    padding-bottom: 7px;
+    margin-top: 25px;"><a href="https://www.starexuniversity.com/admission/"> Apply Now</a></button>
+								 					     	 								</div>
+							</div>
+						</div>
+
+
+					</div>
+				</div>
+			</div>
+			<!-- <div class="col-md-4 order-md-1">
+				<div class="row   m-0 p-0">
+					<div class="col-12 m-0 p-0">
+					   
+						<ul class="leftnav">
+
+						
+                       
+                        <li><a class="" href="https://www.starexuniversity.com/academics/Agriculture-Science">Agriculture Science</a></li><li><a class="" href="https://www.starexuniversity.com/academics/Commerce-Management">Commerce & Management</a></li><li><a class="" href="https://www.starexuniversity.com/academics/Physical-Sciences">Physical Sciences</a></li><li><a class="" href="https://www.starexuniversity.com/academics/Computer-Science-Technology">Computer Science & Technology </a></li><li><a class="" href="https://www.starexuniversity.com/academics/engineering-and-technologys">Engineering & Technology</a></li><li><a class="" href="https://www.starexuniversity.com/academics/Pharmaceutical-Science">Pharmaceutical Science </a></li><li><a class="" href="https://www.starexuniversity.com/academics/Hotel-Management">Hotel Management</a></li><li><a class="" href="https://www.starexuniversity.com/academics/Humanities">Humanities</a></li><li><a class="active" href="https://www.starexuniversity.com/academics/Law">Law</a></li><li><a class="" href="https://www.starexuniversity.com/academics/Life-Sciences">Life Sciences</a></li><li><a class="" href="https://www.starexuniversity.com/academics/Vocational-Courses">Vocational  Courses</a></li>
+                         
+					 
+				</ul>
+					</div>
+				</div>
+
+							</div> -->
+
+
+		</div>
+	</div>
+</section>
