--- a/src/app/header/header.scss
+++ b/src/app/header/header.scss
@@ -1,5 +1,5 @@
 .logo {
-  height: 40px;
+  height: 4rem;
   width: auto;
   margin-right: 16px;
 }
@@ -21,7 +21,8 @@
   top: 0;
   background: linear-gradient(to bottom, #2c9bdf, #003366);
   --focus-outline-color: #CEDEDA;
-  color: white
+  color: white;
+  z-index: 2;
 }
 
 button {
